--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     </font>
     
     <a href="/sp2b/linux">Linux Commands</a>
+    <a href="/cgi-bin/sp2b/pistatus.cgi">CGI Script</a>
+    <a href="/cgi-bin/sp2b/rpistatus.cgi">Pis alive</a>
+    <a href="/sp2b/forminput2.php">Area of a circle</a>
 
   </body>
 </html>
